--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Flashcard</title>
+    <title>jogo de perguntas e respostas</title>
 </head>
 <body>
     <main>
@@ -13,17 +13,17 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>qual e capital do brasil?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>Oa capital do Brasil e brasilia </p>
                     </div>
                 </div>
             </article> -->
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+        <p>Projeto desenvolvido pela aluna jozieli para obtenção da nota final</p>
     </footer>
     <script src="app.js"></script>
     <script src="perguntas.js"></script>
